# parallax-marching-squares

./: .gitignore  CMakeLists.txt  LICENSE  README.md  compile_commands.json  test.py
assets/: layer.frag  layer.vert  player.frag  player.vert
src/: aabb.cpp  aabb.h  character.cpp  character.h  main.cpp  noisegen.cpp  noisegen.h  renderman.cpp  renderman.h
